k8s/beta/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dilek-kumbarasi-beta
  namespace: dilek-kumbarasi-beta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dilek-kumbarasi-beta
  template:
    metadata:
      labels:
        app: dilek-kumbarasi-beta
    spec:
      containers:
        - name: dilek-kumbarasi-beta
          image: ghcr.io/ayavuzer/dilek-kumbarasi:beta-2.2.0-p54
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /app/uploads
              name: dilek-storage
              subPath: uploads
            - mountPath: /app/data
              name: dilek-storage
              subPath: data
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
        - name: dilek-storage
          persistentVolumeClaim:
            claimName: dilek-kumbarasi-beta-pvc
