k8s/beta/ingress-dilekfeneri.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dilekfeneri-tls
  namespace: dilek-kumbarasi-beta
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dilekfeneri.mezodigi.ai
      secretName: dilekfeneri-metz-tls
  rules:
    - host: dilekfeneri.mezodigi.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dilek-kumbarasi-beta
                port:
                  number: 80
