k8s/beta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dilek-kumbarasi-beta-ingress
  namespace: dilek-kumbarasi-beta
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
spec:
  ingressClassName: nginx
  rules:
    - host: dilek-kumbarasi-beta.mindops.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dilek-kumbarasi-beta
                port:
                  number: 80
